--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 	],
 	"require": {
 		"php": ">=5.3.0",
-		"twig/twig": "*"
+		"twig/twig": "^1.38 || ^2.7"
 	},
 	"autoload": {
 		"files": ["Extension.php"]
